# finger_prints

./: .gitignore  CMakeLists.txt  README.md  graphs.py
demo/: .test_main1.cpp.swp  CMakeLists.txt  Image.h  demo.cpp  main.cpp  starter2_main.cpp  test.cpp  test_elasticity.cpp  test_linear_filtering.cpp  test_main1.cpp  test_main2.cpp  test_morphological_filtering.cpp  test_optimization.cpp  test_pressure.cpp  test_rectangles.cpp  test_rotations.cpp  test_starter2.cpp  test_starter3.cpp  test_starter4.cpp  test_symmetries.cpp  test_translations.cpp
doc/: doxyfilerc
docs/: ._doxyfilerc
img/saved/: page_garde.xcf
include/: CMakeLists.txt  Image.h  Starter2.h  image.h  linear_filtering.h  main1.h  mainpage.h  optimization.h  pressure.h  starter3.h
others/: CMakeLists.txt  data_transx.txt  data_tx.txt  data_txy.txt  graphs.py  loss_functions.cpp  loss_functions.py
src/: .image.cpp.swp  CMakeLists.txt  Makefile  Starter2.cpp  image.cpp  linear_filtering.cpp  main1.cpp  optimization.cpp  pressure.cpp  starter3.cpp
test/: CMakeLists.txt  main_tests.cpp  test_binarization.h  test_convolution.h  test_difference.h  test_distmax.h  test_equality.h  test_error.h  test_getters.h  test_gtest.cpp  test_minmax.h  test_rectangles.h
tests/: CMakeLists.txt
